--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="drop-section" id="dropArea">
             <div class="col">
                 <div class="cloud-icon">
-                    <img src="icons/cloud.png" alt="cloud">
+                    <img src="cloud.png" alt="cloud">
                 </div>
             </div>
             <h2>Scan Driver's License</h2>
