--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </div>
             <h2>Scan Driver's License</h2>
             <label for="myFile">Drag & Drop or Click to Choose File</label>
-            <input type="file" class="file-selector-input" multiple onchange="uploadFile(this.files)">
-          <!--  <input type="button" value="Upload" onclick="uploadFile()" /> -->
+            <input type="myFile" class="file-selector-input" multiple onchange="uploadFile(this.files)">
+           <input type="button" value="Upload" onclick="uploadFile()" /> 
           </div>
         </div>
         <div class="list-section">
