--- a/index.html
+++ b/index.html
@@ -1,365 +1,113 @@
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0px;
-  padding: 50px;
-  background: linear-gradient(to bottom right, #FF00FF, #0050a0, #87CEEB, #0050a0, #FF00FF);
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drag and Drop File Upload</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="header-section">
+            <h1>Upload Files</h1>
+            <p>Upload files you want to share with your team members.</p>
+            <p>PDF, Images & Videos are allowed.</p>
+        </div>
+        <div class="drop-section" id="dropArea">
+            <div class="col">
+                <div class="cloud-icon">
+                    <img src="cloud.png" alt="cloud">
+                </div>
+            </div>
+            <h2>Scan Driver's License</h2>
+            <!-- <label for="myFile">Drag & Drop or Click to Choose File</label> -->
+            <input type="file" class="file-selector-input" multiple onchange="uploadFile(this.files)">
+           <input type="button" value="Upload" onclick="uploadFile()" /> 
+          </div>
+        </div>
+        <div class="list-section">
+            <div class="list"></div>
+        </div>
+        <!-- Manual Upload Button -->
+  <div class="button-container">
+    <button class="button" onclick="window.location.href = 'Manual.html';">Manual Upload</button>
+  </div>
+    </div>
+  <script>
+  function uploadFile() {
+      var fileInput = document.getElementById('myFile');
+      var file = fileInput.files[0];
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+      if (file) {
+        var formData = new FormData();
+        formData.append('file', file);
 
-* {
-  box-sizing: border-box;
-}
+        fetch('https://your-power-automate-endpoint', {
+          method: 'POST',
+          body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+          console.log('File uploaded successfully:', data);
+          // Handle success, if needed
+        })
+        .catch(error => {
+          console.error('Error uploading file:', error);
+          // Handle error, if needed
+        });
+      } else {
+        console.error('No file selected.');
+        // Handle no file selected, if needed
+      }
+    }
 
-.header {
-  background-size: 700px;
-  background-image: url("CPSI_bg.jpg");
-  padding: 1rem;
-  -webkit-text-stroke: 1px black;
-  text-align: center;
-  font-family: "Helvetica";
-}
+    var dropArea = document.getElementById('dropArea');
 
-.title {
-  margin: 0;
-  line-height: 1.5;
-  font-size: 2rem;
-  color: #ffffff;
-}
+    // Drag over
+    dropArea.ondragover = (e) => {
+      e.preventDefault();
+      dropArea.classList.add('drag-over-effect');
+    }
 
-.main-content {
-  min-height: 100vh;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+    // Drag leave
+    dropArea.ondragleave = () => {
+      dropArea.classList.remove('drag-over-effect');
+    }
 
-.description {
-  margin: 2rem 0;
-  line-height: 1.5;
-  font-size: 1rem;
-  color: #555;
-}
+    // Drop
+    dropArea.ondrop = (e) => {
+      e.preventDefault();
+      dropArea.classList.remove('drag-over-effect');
+      if(e.dataTransfer.items){
+          [...e.dataTransfer.items].forEach((item) => {
+              if(item.kind === 'file'){
+                  const file = item.getAsFile();
+                  if(typeValidation(file.type)){
+                      uploadFile(file)
+                  }
+              }
+          })
+      }else{
+          [...e.dataTransfer.files].forEach((file) => {
+              if(typeValidation(file.type)){
+                  uploadFile(file)
+              }
+          })
+      }
+    }
 
-.jimmy {
-  color: transparent;
-}
+    // Function to validate file type
+    function typeValidation(fileType) {
+      // Implement your file type validation logic here
+      return true; // Example: Always return true for demonstration purposes
+    }
 
-.jimmy::-webkit-file-upload-button {
-  visibility: hidden;
-}
-
-.jimmy::before {
-  content: "Select a file";
-  color: #fff;
-  display: inline-block;
-  background: #0070f3;
-  border: none;
-  padding: 2px 3px;
-  border-radius: 3px;
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 12pt;
-}
-
-.jimmy:hover::before {
-  background-color: #0a2ac7;
-}
-
-.submit {
-  color: #fff;
-  display: inline-block;
-  border: none;
-  border-radius: 3px;
-  background: #0070f3;
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 12pt;
-}
-
-.submit:hover {
-  background-color: #0a2ac7;
-}
-
-.grid {
-  display: flex;
-  align-items: wrap;
-  justify-content: space-between;
-  /* flex-wrap: wrap; */
-  gap: 2rem;
-  max-width: 800px;
-}
-
-.card {
-  background-color: #ffffff;
-  text-align: center;
-  color: #333;
-  text-decoration: none;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-@media (min-width: 600px) {
-  .card {
-    width: 48%;
-  }
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-  color: #333;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1rem;
-  line-height: 1.5;
-  color: #555;
-}
-
-button {
-  background-color: #0070f3;
-  color: #ffffff;
-  padding: 2px 3px;
-  font-size: 1.5rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: 600;
-  transition: background-color 0.3s ease;
-}
-
-button:hover {
-  background-color: #0a2ac7;
-}
-
-header-section {
-  padding: 25px 0px;
-}
-
-.header-section h1 {
-  font-weight: 500;
-  font-size: 1.7rem;
-  text-transform: uppercase;
-  color: #707ea0;
-  margin: 0px;
-  margin-bottom: 8px;
-}
-
-.header-section p {
-  margin: 5px;
-  font-size: 0.95rem;
-  color: #707ea0;
-  padding: 25px 0px;
-}
-
-.drop-section {
-  min-height: 250px;
-  border: 1px dashed #a8b3e3;
-  background-image: linear-gradient(180deg, white, #f1f6ff);
-  margin: 5px 35px 35px 35px;
-  border-radius: 12px;
-  position: relative;
-}
-
-.drop-section div.col:first-child {
-  opacity: 1;
-  visibility: visible;
-  transition-duration: 0.2s;
-  transform: scale(1);
-  width: 200px;
-  margin: auto;
-}
-
-.drop-section div.col:last-child {
-  font-size: 40px;
-  font-weight: 700;
-  color: #c0cae1;
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  margin: auto;
-  width: 200px;
-  height: 55px;
-  pointer-events: none;
-  opacity: 0;
-  visibility: hidden;
-  transform: scale(0.6);
-  transition-duration: 0.2s;
-}
-
-/* we will use "drag-over-effect" class in js */
-.drag-over-effect div.col:first-child {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transform: scale(1.1);
-}
-
-.drag-over-effect div.col:last-child {
-  opacity: 1;
-  visibility: visible;
-  transform: scale(1);
-}
-
-.drop-section .cloud-icon {
-  margin-top: 25px;
-  margin-bottom: 20px;
-}
-
-.drop-section span,
-.drop-section button {
-  display: block;
-  margin: auto;
-  color: #707ea0;
-  margin-bottom: 10px;
-}
-
-.drop-section button {
-  color: white;
-  background-color: #5874c6;
-  border: none;
-  outline: none;
-  padding: 7px 20px;
-  border-radius: 8px;
-  margin-top: 20px;
-  cursor: pointer;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-}
-
-.drop-section input {
-  display: none;
-}
-
-.list-section {
-  display: none;
-  text-align: left;
-  margin: 0px 35px;
-  padding-bottom: 20px;
-}
-
-.list-section .list-title {
-  font-size: 0.95rem;
-  color: #707ea0;
-}
-
-.list-section li {
-  display: flex;
-  margin: 15px 0px;
-  padding-top: 4px;
-  padding-bottom: 2px;
-  border-radius: 8px;
-  transition-duration: 0.2s;
-}
-
-.list-section li:hover {
-  box-shadow: #e3eaf9 0px 0px 4px 0px, #e3eaf9 0px 12px 16px 0px;
-}
-
-.list-section li .col {
-  flex: 0.1;
-}
-
-.list-section li .col:nth-child(1) {
-  flex: 0.15;
-  text-align: center;
-}
-
-.list-section li .col:nth-child(2) {
-  flex: 0.75;
-  text-align: left;
-  font-size: 0.9rem;
-  color: #3e4046;
-  padding: 8px 10px;
-}
-
-.list-section li .col:nth-child(2) div.name {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  max-width: 250px;
-  display: inline-block;
-}
-
-.list-section li .col .file-name span {
-  color: #707ea0;
-  float: right;
-}
-
-.list-section li .file-progress {
-  width: 100%;
-  height: 5px;
-  margin-top: 8px;
-  border-radius: 8px;
-  background-color: #dee6fd;
-}
-
-.list-section li .file-progress span {
-  display: block;
-  width: 0%;
-  height: 100%;
-  border-radius: 8px;
-  background-image: linear-gradient(120deg, #6b99fd, #9385ff);
-  transition-duration: 0.4s;
-}
-
-.list-section li .col .file-size {
-  font-size: 0.75rem;
-  margin-top: 3px;
-  color: #707ea0;
-}
-
-.list-section li .col svg.cross,
-.list-section li .col svg.tick {
-  fill: #8694d2;
-  background-color: #dee6fd;
-  position: relative;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-}
-
-.list-section li .col svg.tick {
-  fill: #50a156;
-  background-color: transparent;
-}
-
-.list-section li.complete span,
-.list-section li.complete .file-progress,
-.list-section li.complete svg.cross {
-  display: none;
-}
-
-.list-section li.in-prog .file-size,
-.list-section li.in-prog svg.tick {
-  display: none;
-}
-
-.container {
-  text-align: center;
-  width: 100%;
-  max-width: 500px;
-  min-height: 435px;
-  margin: auto;
-  background-color: white;
-  border-radius: 16px;
-  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-}
+    // Function to find icon for file
+    function iconSelector(type) {
+      var splitType = (type.split('/')[0] == 'application') ? type.split('/')[1] : type.split('/')[0];
+      return splitType + '.png';
+    }
+  </script>
+</body>
+</html>
