--- a/Validate.html
+++ b/Validate.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="style.css">
     <title>Display Information</title>
-    <link rel="stylesheet" href="style.css">
     <style>
         body {
             text-align: center;
             margin-top: 50px;
+            background-color: #f4f4f4; /* Light gray background */
+            color: #333; /* Dark text color */
         }
 
         .main-content {
@@ -85,6 +87,26 @@
             <tr>
                 <td>Address:</td>
                 <td id="displayAddress"></td>
+            </tr>
+          <tr>
+              <td>Driver License Exp:</td>
+              <td id="displayLastName"></td>
+          </tr>
+          <tr>
+              <td>Driver License No.:</td>
+              <td id="displayLastName"></td>
+          </tr>
+          <tr>
+              <td>Height:</td>
+              <td id="displayLastName"></td>
+          </tr>
+          <tr>
+              <td>Weight:</td>
+              <td id="displayLastName"></td>
+          </tr>
+          <tr>
+                <td>Sex:</td>
+                <td id="displayLastName"></td>
             </tr>
         </table>
 
