--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Driver's License</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drag and Drop File Upload</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container" id="dropArea">
-    <div class="header-section">
-      <h1>Upload Files</h1>
-      <p>Upload files you want to share with your team members.</p>
-      <p>PDF, Images & Videos are allowed.</p>
-    </div>
-    <div class="drop-section" id="dropArea">
-      <div class="col">
-          <div class="cloud-icon">
-              <img src="cloud.png" alt="cloud">
+    <div class="container">
+        <div class="header-section">
+            <h1>Upload Files</h1>
+           <!-- <p>Upload files you want to share with your team members.</p>
+            <p>PDF, Images & Videos are allowed.</p> -->
+        </div> 
+        <div class="drop-section" id="dropArea">
+            <div class="col">
+                <div class="cloud-icon">
+                    <img src="cloud.png" alt="cloud">
+                </div>
+            </div>
+          <h1>Driver's License Upload</h1>
+          <div class="button-container">
+            <button class="button" onclick="window.location.href = 'Manual.html';">Manual Upload</button>
           </div>
-      </div>
-    <h1>Driver's License Upload</h1>
-    <div class="button-container">
-      <button class="button" onclick="window.location.href = 'Manual.html';">Manual Upload</button>
-    </div>
-    <h2>Scan Driver's License</h2>
-    <input type="file" id="myFile" />
-    <input type="button" value="Upload" onclick="uploadFile()" />
+          <h2>Scan Driver's License</h2>
+          <label for="myFile">Drag & Drop or Click to Choose File</label>
+          <input type="file" id="myFile" />
+          <input type="button" value="Upload" onclick="uploadFile()" />
+          </div>
+        </div>
+        <div class="list-section">
+            <div class="list"></div>
+        </div>
   </div>
-
+    </div>
   <script>
-    function uploadFile() {
+  function uploadFile() {
       var fileInput = document.getElementById('myFile');
       var file = fileInput.files[0];
 
