--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drag and Drop File Upload</title>
     <link rel="stylesheet" href="style.css">
 </head>
+  
 <body>
+  <header class="header">
+      <h1 class="title">CPSI SCAN A DOC</h1>
+  </header>
     <div class="container">
         <div class="header-section">
             <h1>Upload Files</h1>
