--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
   </div>
     </div>
-  <script>
+<!--  <script>
   function uploadFile() {
       var fileInput = document.getElementById('myFile');
       var file = fileInput.files[0];
@@ -113,6 +113,6 @@
       var splitType = (type.split('/')[0] == 'application') ? type.split('/')[1] : type.split('/')[0];
       return splitType + '.png';
     }
-  </script>
+  </script> -->
 </body>
 </html>
