--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
   <script>
     
     function confirmUpload() {
-        if (confirm("Are you sure you want to submit the information for extraction?")) {
-            uploadFile();
-        } else {
-            // User clicked Cancel, do nothing
-        }
-    }
+          if (confirm("Are you sure you want to submit the information for extraction?")) {
+              uploadFile();
+              window.location.href = 'Validate.html'; // Redirect to Validation.html
+          } else {
+              // User clicked Cancel, do nothing
+          }
+      }
   /* function uploadFile() {
       var fileInput = document.getElementById('myFile');
       var file = fileInput.files[0];
