--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     function confirmUpload() {
           if (confirm("Are you sure you want to submit the information for extraction?")) {
-              uploadFile();
+          //    uploadFile();
               window.location.href = 'Validate.html'; // Redirect to Validation.html
           } else {
               // User clicked Cancel, do nothing
