--- a/Validate.html
+++ b/Validate.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Display Information</title>
     <style>
         body {
             text-align: center;
             margin-top: 50px;
-            background-color: #f4f4f4; /* Light gray background */
-            color: #333; /* Dark text color */
+            background-color: #f4f4f5; /* Light gray background */
+            color: #000; /* Dark text color */
         }
 
         .main-content {
@@ -28,6 +28,7 @@
             width: 80%;
             max-width: 800px;
             margin-bottom: 20px;
+            background-color: white; /* Set table background to white */
         }
 
         th, td {
@@ -66,11 +67,11 @@
 
 <body>
     <main class="main-content">
-        <h2>Submitted Information:</h2>
+        <h2>Extracted Information:</h2>
         <table>
             <tr>
                 <th>Field</th>
-                <th>Answer</th>
+                <th>Patient Information</th>
             </tr>
             <tr>
                 <td>First Name:</td>
@@ -88,23 +89,23 @@
                 <td>Address:</td>
                 <td id="displayAddress"></td>
             </tr>
-          <tr>
-              <td>Driver License Exp:</td>
-              <td id="displayLastName"></td>
-          </tr>
-          <tr>
-              <td>Driver License No.:</td>
-              <td id="displayLastName"></td>
-          </tr>
-          <tr>
-              <td>Height:</td>
-              <td id="displayLastName"></td>
-          </tr>
-          <tr>
-              <td>Weight:</td>
-              <td id="displayLastName"></td>
-          </tr>
-          <tr>
+            <tr>
+                <td>Driver License Exp:</td>
+                <td id="displayLastName"></td>
+            </tr>
+            <tr>
+                <td>Driver License No.:</td>
+                <td id="displayLastName"></td>
+            </tr>
+            <tr>
+                <td>Height:</td>
+                <td id="displayLastName"></td>
+            </tr>
+            <tr>
+                <td>Weight:</td>
+                <td id="displayLastName"></td>
+            </tr>
+            <tr>
                 <td>Sex:</td>
                 <td id="displayLastName"></td>
             </tr>
