--- a/Validate.html
+++ b/Validate.html
@@ -137,7 +137,8 @@
         }
 
         function validate() {
-            // Add validation logic here
+            alert("Thank you, this information will now be sent to your medical assistant.");
+           window.location.href = 'index.html';
         }
 
         displayStoredData();
