--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     function confirmUpload() {
           if (confirm("Are you sure you want to submit the information for extraction?")) {
           //    uploadFile();
-              window.location.href = 'Validate.html'; // Redirect to Validation.html
+              window.location.href = 'loadSExtract.html'; // Redirect to Validation.html
           } else {
               // User clicked Cancel, do nothing
           }
