--- a/loadSExtract.html
+++ b/loadSExtract.html
@@ -51,11 +51,11 @@
 
         .loading-circle {
             position: absolute;
-            bottom: 20px;
+            bottom: 300px;
             width: 40px;
             height: 40px;
             border: 4px solid rgba(0, 112, 243, 0.2);
-            border-top: 4px solid #0070f3;
+            border-top: 4px solid #000;
             border-radius: 50%;
             animation: spin 1s linear infinite;
             transition: opacity 1s ease-in-out;
