--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
           <h1>Driver's License Upload</h1>
           <div class="button-container">
-            <button class="button" onclick="window.location.href = 'loadSExtract.html';">Manual Upload</button>
+            <button class="button" onclick="window.location.href = 'Manual.html';">Manual Upload</button>
           </div>
           <h2>Scan Driver's License</h2>
           <label for="myFile">Drag & Drop or Click to Choose File</label>
