--- a/Manual.html
+++ b/Manual.html
@@ -108,7 +108,7 @@
             sessionStorage.setItem('dob', dob);
             sessionStorage.setItem('address', address);
 
-            window.location.href = 'Validate.html'; // Update the file name here
+            window.location.href = 'loadSExtract.html'; // Update the file name here
         }
 
         function goBack() {
