--- a/Manual.html
+++ b/Manual.html
@@ -81,6 +81,35 @@
             <input type="text" id="addressInput" placeholder="Type your address...">
         </div>
 
+        <div class="input-container">
+            <h2>Enter your Driver's License Number:</h2>
+            <input type="text" id="licenseNumberInput" placeholder="Type your license number...">
+        </div>
+
+        <div class="input-container">
+            <h2>Enter your Height:</h2>
+            <input type="text" id="heightInput" placeholder="Type your height...">
+        </div>
+
+        <div class="input-container">
+            <h2>Enter your Weight:</h2>
+            <input type="text" id="weightInput" placeholder="Type your weight...">
+        </div>
+
+        <div class="input-container">
+            <h2>Enter your Driver's License Expiration Date:</h2>
+            <input type="date" id="expirationDateInput">
+        </div>
+
+        <div class="input-container">
+            <h2>Enter your Sex:</h2>
+            <select id="sexInput">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="other">Other</option>
+            </select>
+        </div>
+
         <div class="button-container">
             <button onclick="submitData()">Submit</button>
             <button onclick="goBack()">Back</button>
@@ -93,6 +122,11 @@
             var storedLastName = sessionStorage.getItem('lastName');
             var storedDob = sessionStorage.getItem('dob');
             var storedAddress = sessionStorage.getItem('address');
+            var storedLicenseNumber = sessionStorage.getItem('licenseNumber');
+            var storedHeight = sessionStorage.getItem('height');
+            var storedWeight = sessionStorage.getItem('weight');
+            var storedExpirationDate = sessionStorage.getItem('expirationDate');
+            var storedSex = sessionStorage.getItem('sex');
 
             if (storedFirstName && storedLastName) {
                 document.getElementById("firstNameInput").value = storedFirstName;
@@ -106,6 +140,26 @@
             if (storedAddress) {
                 document.getElementById("addressInput").value = storedAddress;
             }
+
+            if (storedLicenseNumber) {
+                document.getElementById("licenseNumberInput").value = storedLicenseNumber;
+            }
+
+            if (storedHeight) {
+                document.getElementById("heightInput").value = storedHeight;
+            }
+
+            if (storedWeight) {
+                document.getElementById("weightInput").value = storedWeight;
+            }
+
+            if (storedExpirationDate) {
+                document.getElementById("expirationDateInput").value = storedExpirationDate;
+            }
+
+            if (storedSex) {
+                document.getElementById("sexInput").value = storedSex;
+            }
         };
 
         function submitData() {
@@ -113,13 +167,23 @@
             var lastName = document.getElementById("lastNameInput").value;
             var dob = document.getElementById("dobInput").value;
             var address = document.getElementById("addressInput").value;
+            var licenseNumber = document.getElementById("licenseNumberInput").value;
+            var height = document.getElementById("heightInput").value;
+            var weight = document.getElementById("weightInput").value;
+            var expirationDate = document.getElementById("expirationDateInput").value;
+            var sex = document.getElementById("sexInput").value;
 
             sessionStorage.setItem('firstName', firstName);
             sessionStorage.setItem('lastName', lastName);
             sessionStorage.setItem('dob', dob);
             sessionStorage.setItem('address', address);
+            sessionStorage.setItem('licenseNumber', licenseNumber);
+            sessionStorage.setItem('height', height);
+            sessionStorage.setItem('weight', weight);
+            sessionStorage.setItem('expirationDate', expirationDate);
+            sessionStorage.setItem('sex', sex);
 
-            window.location.href = 'Validate.html'; // Update the file name here
+            window.location.href = 'loadSExtract.html'; // Update the file name here
         }
 
         function goBack() {
