--- a/Manual.html
+++ b/Manual.html
@@ -187,7 +187,7 @@
         }
 
         function goBack() {
-            window.location.href = 'Test.html'; // Update the file name here
+            window.location.href = 'index.html'; // Update the file name here
         }
     </script>
 </body>
