--- a/Validate.html
+++ b/Validate.html
@@ -148,7 +148,7 @@
 
         function validate() {
             alert("Thank you, this information will now be sent to your medical assistant.");
-            window.location.href = 'Test.html';
+            window.location.href = 'index.html';
         }
 
         displayStoredData();
