--- a/index.html
+++ b/index.html
@@ -1,52 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drag and Drop File Upload</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-    <header class="header">
-        <h1 class="title">CPSI SCAN A DOC</h1>
-    </header>
-    <div class="container">
-        <div class="header-section">
-            <h1>Upload Files</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>File Upload JavaScript with Progress Ba | Learn With Daniel</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+  </head>
+  <body>
+    <div class="area">
+      <h1 class="title">CPSI</h1>
+      <div class="upload-dl">
+        <div class="wrapper">
+          <header>Driver's License Uploader</header>
+          <form action="#">
+            <input class="file-input" type="file" name="file" hidden multiple />
+            <i class="fas fa-cloud-upload-alt"></i>
+            <p>Browse File to Upload</p>
+          </form>
+          <section class="progress-area"></section>
+          <section class="uploaded-area"></section>
+          <input type="button" value="Upload" onclick="confirmUpload()" /><br />
         </div>
-        <div class="drop-section" id="dropArea">
-            <div class="col">
-                <div class="cloud-icon">
-                    <img src="cloud.png" alt="cloud">
-                </div>
-            </div>
-            <h1>Driver's License Upload</h1>
-            <div class="button-container">
-                <button class="button" onclick="window.location.href = 'Manual.html';">Manual Upload</button>
-            </div>
-            <h2>Scan Driver's License</h2>
-            <label for="myFile">Drag & Drop or Click to Choose File</label>
-            <input type="file" id="myFile" multiple /> <!-- Added multiple attribute here -->
-            <input type="button" value="Upload" onclick="confirmUpload()" /> <!-- Modified to call confirmUpload function -->
-        </div>
+      </div>
+      <button class="button" onclick="window.location.href = 'Manual.html';">
+        Manual Upload
+      </button>
+      <script src="jsIndex.js"></script>
     </div>
-    <div class="list-section">
-        <div class="list"></div>
-    </div>
-
-    <script>
-        function confirmUpload() {
-            if (confirm("Are you sure you want to submit the information for extraction?")) {
-                // uploadFile();
-                window.location.href = 'loadSExtract.html'; // Redirect to Validation.html
-            } else {
-                // User clicked Cancel, do nothing
-            }
-        }
-    </script>
-</body>
-
+  </body>
 </html>
